syntax = "proto3";
option go_package = "github.com/ngld/knossos/packages/api/client";
package ngld.knossos;

// List of builtin types: https://developers.google.com/protocol-buffers/docs/proto3#scalar

import "google/protobuf/timestamp.proto";
import "mod.proto";

// Common types

message NullMessage {}
message NullResponse {
  bool dummy = 1;
}

message SuccessResponse {
  bool success = 1;
}

// RPC types

message TaskRequest {
  uint32 ref = 1;
}

message WakeupResponse {
  bool success = 1;
  string version = 2;
  string os = 3;
}

message SpeedTestResult {
  map<string,uint32> speeds = 1;
}

message ArchiveResult {
  message Archive {
    repeated string files = 1;
  }

  map<string,Archive> result = 1;
}

message Settings {
	string libraryPath = 1;
	bool updateCheck = 2;
	bool errorReports = 3;
	int32 maxDownloads = 4;
	int32 bandwidthLimit = 5;
}

message SimpleModList {
  repeated Release mods = 1;
}

message ModInfoRequest {
  string id = 1;
  string version = 2;
}

message ToolInfo {
  string label = 1;
  string id = 2;
  bool debug = 3;
  bool fred = 4;
}

message ModInfoResponse {
  Release mod = 1;

  repeated ToolInfo tools = 2;
}

// event messages

message ClientSentEvent {
  uint32 ref = 1;
  oneof payload {
    LogMessage message = 2;
    ProgressMessage progress = 3;
  }
}

message LogMessage {
  enum LogLevel {
    UNKNOWN = 0;
    TRACE = 1;
    DEBUG = 2;
    INFO = 3;
    WARNING = 4;
    ERROR = 5;
    FATAL = 6;
  }
  LogLevel level = 1;
  string message = 2;
  string sender = 3;
  google.protobuf.Timestamp time = 4;
}

message ProgressMessage {
  float progress = 1;
  string description = 2;
  bool error = 3;
  bool indeterminate = 4;
}

// RPC methods

service Knossos {
  rpc Wakeup (NullMessage) returns (WakeupResponse) {};
  rpc DispatchTest (NullMessage) returns (NullResponse) {};
  rpc SpeedTest (TaskRequest) returns (SpeedTestResult) {};
  rpc ArchiveTest (TaskRequest) returns (NullResponse) {};
  rpc GetSettings (NullMessage) returns (Settings) {};
  rpc SaveSettings (Settings) returns (SuccessResponse) {};
  rpc ScanLocalMods (TaskRequest) returns (SuccessResponse) {};
  rpc GetLocalMods (NullMessage) returns (SimpleModList) {};
  rpc GetModInfo (ModInfoRequest) returns (ModInfoResponse) {};
}
